---
config:
  layout: elk
  theme: redux-color
title: Workbook File Data Model
"
---
erDiagram
	direction LR
	Workbook {
		string id PK ""  
		string name  ""  
		datetime createdAt  ""  
		datetime updatedAt  ""  
		string userId FK ""  
		string organizationId FK ""  
	}

	SnapshotTable {
		string id PK ""  
		string connectorAccountId FK ""  
		string name  ""  
		string workbookId FK ""  
		jsonb tableSpec  ""  
	}

	Folder {
		string id PK ""  
		string parentId FK "The id of the parent folder, if any"  
		string snapshotTableId FK "Link to a SnapshotTable if backed by data source"  
		string name  "Name of the folder"  
		string path  "Synthetic path for folder (indexed, unique)"  
		string workbook_id FK "The workbook the folder belongs to"  
	}

	File {
		string id PK "Internal unique ID for the file"  
		string remote_id  "Remote ID for the file, if the file is synced from a connector"  
		string folder_id FK "The id of the folder the file is in. Null == root"  
		string name  "The name of the file"  
		string path  "Synthetic path for the file (indexed, unique)"  
		text content  "Active content of the file"  
		text original  "Original content of the file, as it was when first created or pulled from remote"  
		text suggested  "Content containing suggestions"  
    jsonb metadata "Synthetic object storing metadata properties of the file"
		boolean suggested_delete  "Flag indicating file was deleted by agent and is pending acceptance"  
		timestamp created_at  "Timestamp when the file was created"  
		timestamp updated_at  "Timestamp when the file was last updated"  
		boolean deleted  "Flag indicating file was deleted by user and should be deleted from remote"  
		boolean dirty  "Flag indicating file has been modified since original content was set"  
		jsonb errors  "Connector-specific errors for the file"  
		boolean seen  "Tracks seen state for the file during sync operations"  
	}

	ConnectorAccount {
		string id PK ""  
	}

	Workbook||--o{SnapshotTable:"contains"
	SnapshotTable|o--o|Folder:"linked to"
	Folder||--o{File:"contains"
	ConnectorAccount|o--o{SnapshotTable:"contains"